[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = ["bevy_sprite", "bevy_text", "bevy_ui", "bevy_core_pipeline", "bevy_render", "bevy_asset", "png"] }
rand = "0.8.5"
